<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="samsumg">Samsung</string>
    <string name="apple">Apple</string>
    <string name="xiomi">Xiomi</string>
    <string name="nokia">Nokia</string>
    <string name="sony">Sony</string>
    <string name="motorola">Motorola </string>
    <string name="lenovo">Lenovo</string>
    <string name="huawei">Huawei</string>
    <string name="lg">LG</string>
    <string name="ingandegcount">Ingandegcount</string>
    <string name="light_bulb">Light Bulb</string>
    <string name="t8">15T8</string>
    <string name="themes_editor">Themes Editor</string>
    <string name="samsumg_text">По мнению многих пользователей, Samsung Galaxy – это самый лучший смартфон по ряду показателей, таких как производительность, функциональность, надежность и пр. Samsung выпускает самые лучшие экраны, и в целом оснащение флагманов самое топовое.</string>
    <string name="apple_text">Если вы не стеснены в деньгах, выбрать Apple имеет смысл по ряду причин. Эти смартфоны одни из самых мощных, в плане качества начинки им тоже сложно найти равных. Причем это касается всего, начиная от камеры, и заканчивая аудиочипом. Кроме того, их дизайн стал предметом для подражания. Поэтому IPhone уже многие годы является настоящей легендой.</string>
    <string name="xiomi_text">По количеству продаж Xiaomi составляет большую конкуренцию таким гигантам, как Apple и Samsung. Основное достоинство этих телефонов – высокая производительность и доступность. Они обладают хорошо себя зарекомендовавшей оболочкой MIUI, полюбившейся миллионам пользователей. Помимо основной линейки, компания выпускает телефоны под более бюджетным суббрендом Redmi.</string>
    <string name="nokia_text">Nokia не нуждается в представлении, ведь это звезда “девяностых” и “нулевых”. Однако за последние 8–10 лет бывший флагман ушел на второй или даже третий план. Правда, последние несколько лет компания пытается исправить ситуацию. Но, эта попытка пока значительных результатов не принесла. Nokia выпускает стильные смартфоны с неплохой начинкой, но пользователи жалуются на ПО. Кроме того, надежность зачастую оставляет желать лучшего, но проблема решается гарантийным обслуживанием.</string>
    <string name="sony_text">Этого производителя постигла та же участь, что и Nokia. В целом неплохие смартфоны, однако их флагманы уступают сегодняшним лидерам рынка. Модели средней и низшей ценовой категории стоят значительно дороже многих своих аналогов. Тем не менее, у Sony имеются свои поклонники и бренд достоин, чтобы войти в топ 10.</string>
    <string name="lenovo_text">Lenovo один из крупнейших китайских брендов, купивший в 2014 году подразделения Motorola Mobility. Это недорогие телефоны, которые пользователи любят за невысокую стоимость и хорошее качество. Правда, самыми дешевыми китайскими брендами Lenovo и Motorola, конечно, назвать нельзя. В 2019 году марка Lenovo ушла с российского рынка, но обширно представлена на Aliexpress по очень "вкусным" ценам. </string>
    <string name="motorola_text">Motorola представлена в небольшом количестве, но новые модели продолжают появляться.</string>
    <string name="huawei_text">Huawei можно было бы расположить на одной позиции с Xiaomi, однако в середине 2019 года из-за торговой войны между США и Китаем, на компанию были наложены санкции и все привычные сервисы Google, в том числе и Google play, в новых моделях смартфонов будут отсутствовать. Так что акцент при покупке стоит делать на модели, выпущеные до конца 2019 года. В 2021 году они по-прежнему актуальны, особенно с учетом снижения цен. В случае, если в 2021 году санкции будут сняты, мы пересмотрим рейтинг. А вот с бренда Honor санкции были сняты и ближайшее время мы увидим устройства поддерживающие сервисы от Google. </string>
    <string name="lg_text">LG – один из самых известных южно-корейских брендов. Правда, смартфоны не пользуются такой популярностью как, к примеру, Samsung. Но, в целом производитель держит марку. Продукция не вызывает нареканий в плане основных критериев. При этом цена далеко не заоблачная. В конце 2019 года компания приняла решение уйти с российского рынка мобильных телефонов и соответственно выбывает из нашего рейтинга, так как в отличии от Meizu, заказать новые смартфоны с Aliexpress не получится.</string>
    <string name="morning">MORNING</string>
    <string name="_1">-1°</string>
    <string name="day">DAY</string>
    <string name="_3">+3°</string>
    <string name="mostly_nsunny">Mostly\nSunny</string>
    <string name="evening">EVENING</string>
    <string name="night">NIGHT</string>
    <string name="_2">-2°</string>
    <string name="_0">0°</string>
    <string name="todo">TODO</string>
    <string name="wind_n5_mph_nhummidity_45">Wind: N5 mph\nhummidity:45%</string>
    <string name="_185_followers">185 followers</string>
    <string name="no_followers">no followers</string>
    <string name="_45_followers">45 followers</string>
    <string name="danielle_kim">Danielle Kim</string>
    <string name="dirk_riese">Dirk Riese</string>
    <string name="deborah_kim">Deborah Kim</string>
    <string-array name="brends">
        <item>Samsung</item>
        <item>Apple</item>
        <item>Xiomi</item>
        <item>Nokia</item>
        <item>Sony</item>
        <item>Motorola</item>
        <item>Lenovo</item>
        <item>Huawei</item>
        <item>LG</item>
    </string-array>

</resources>