<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MorningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FBCE47"
        android:orientation="horizontal">

        <TextView
            style="EmptyTextView"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/morning"
                style="@style/TextViewLargeStyle"
                android:layout_weight="2"
                android:text="@string/morning" />

            <TextView
                android:id="@+id/morningC"
                style="@style/TextViewTemperatureStyle"
                android:layout_weight="2"
                android:text="@string/_1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#FF9800"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:scaleType="centerInside"
            android:src="@drawable/apple" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day"
                style="@style/TextViewLargeStyle"
                android:layout_weight="1"
                android:text="@string/day" />

            <TextView
                android:id="@+id/day_c"
                style="@style/TextViewTemperatureStyle"
                android:layout_weight="1"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/day_info"
                style="@style/TextViewTemperatureStyle"
                android:layout_weight="2"
                android:text="@string/mostly_nsunny" />

            <TextView
                android:id="@+id/day_params"
                style="@style/TextViewSmallStyle"
                android:layout_weight="2"
                android:text="@string/wind_n5_mph_nhummidity_45" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#BD4302"
        android:orientation="horizontal">

        <TextView
            style="EmptyTextView"
            android:layout_weight="3"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/evening"
                style="@style/TextViewLargeStyle"
                android:layout_weight="2"
                android:text="@string/evening" />

            <TextView
                android:id="@+id/eveningC"
                style="@style/TextViewTemperatureStyle"
                android:layout_weight="2"
                android:text="@string/_0" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#613301"
        android:orientation="horizontal">

        <TextView
            style="EmptyTextView"
            android:layout_weight="3"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/night"
                style="@style/TextViewLargeStyle"
                android:layout_weight="2"
                android:text="@string/night" />

            <TextView
                android:id="@+id/nightC"
                style="@style/TextViewTemperatureStyle"
                android:layout_weight="2"
                android:text="@string/_2" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>